changed order of labels